<?xml version="1.0"?>
<package format="2">
  <name>teleop</name>
  <version>0.0.0</version>
  <description>Controls Robocar with input from controller.</description>

  <maintainer email="noahwager@gmail.com">Noah Wager</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
</package>
